# formatter_project

./: Makefile  README.md  pyproject.toml
arithmetic_formatter/: arithmetic_formatter.py
formatter/: arithmetic_formatter.py  calculate.py  welcome.py
formatter/scripts/: runner.py
tests/: test.py  test_arithmetic_formatter.py
tests/fixtures/: expected_1.txt  expected_2.txt  test_case_1.txt  test_case_2.txt
